<resources>
    <string name="app_name">Quizkart</string>
    <string name="a_computer_is_a_programmable_electronic_device_that_accepts_raw_data_as_input_and_processes_it_with_a_set_of_instructions_a_program_to_produce_the_result_as_output_it_renders_output_just_after_performing_mathematical_and_logical_operations_and_can_save_the_output_for_future_use_it_can_process_numerical_as_well_as_non_numerical_calculations_the_term_computer_is_derived_from_the_latin_word_computare_which_means_to_calculate_n_a_computer_is_designed_to_execute_applications_and_provides_a_variety_of_solutions_through_integrated_hardware_and_software_components_it_works_with_the_help_of_programs_and_represents_the_decimal_numbers_through_a_string_of_binary_digits_it_also_has_a_memory_that_stores_the_data_programs_and_result_of_processing_the_components_of_a_computer_such_as_machinery_that_includes_wires_transistors_circuits_hard_disk_are_called_hardware_whereas_the_programs_and_data_are_called_software_n_it_is_believed_that_the_analytical_engine_was_the_first_computer_which_was_invented_by_charles_babbage_in_1837_it_used_punch_cards_as_read_only_memory_charles_babbage_is_also_known_as_the_father_of_the_computer">A computer is a programmable electronic device that accepts raw data as input and processes it with a set of instructions (a program) to produce the result as output. It renders output just after performing mathematical and logical operations and can save the output for future use. It can process numerical as well as non-numerical calculations. The term computer is derived from the Latin word computare which means to calculate. \n A computer is designed to execute applications and provides a variety of solutions through integrated hardware and software components. It works with the help of programs and represents the decimal numbers through a string of binary digits. It also has a memory that stores the data, programs, and result of processing. The components of a computer such as machinery that includes wires, transistors, circuits, hard disk are called hardware. Whereas, the programs and data are called software. \n It is believed that the Analytical Engine was the first computer which was invented by Charles Babbage in 1837. It used punch cards as read-only memory. Charles Babbage is also known as the father of the computer.</string>
    <string name="todo">TODO</string>
    <string name="drive_n_na_drive_is_a_location_medium_that_is_capable_of_storing_and_reading_information_that_is_not_easily_removed_like_a_disk_or_disc_all_drives_store_files_and_programs_used_by_your_computer_for_example_when_you_write_a_letter_in_a_word_processor_the_program_is_loaded_from_the_hard_drive_when_you_save_the_document_it_s_saved_to_the_hard_drive_or_other_disk_or_drive_n_ncompact_disc_cd_a_compact_disc_is_a_portable_storage_medium_that_can_be_used_to_record_store_and_play_back_audio_video_and_other_n_npen_drive_a_usb_flash_drive_also_known_as_a_usb_stick_usb_thumb_drive_or_pen_drive_is_a_plug_and_play_portable_storage_device_that_uses_flash_memory_and_is_lightweight_enough_to_attach_to_a_keychain_a_usb_flash_drive_can_be_used_in_place_of_a_compact_disc_a_usb_flash_drive_also_known_as_a_usb_stick_usb_thumb_drive_or_pen_drive_is_a_plug_and_play_portable_storage_device_that_uses_flash_memory_and_is_lightweight_enough_to_attach_to_a_keychain_a_usb_flash_drive_can_be_used_in_place_of_a_compact_disc_n_nsd_card_a_secure_digital_sd_card_is_a_tiny_flash_memory_card_designed_for_high_capacity_memory_and_various_portable_devices_such_as_car_navigation_systems_cellular_phones_e_books_pdas_smartphones_digital_cameras_music_players_digital_video_camcorders_and_personal_computers_n_n_hd_hard_drive_hd_is_an_initialism_used_for_hard_drive_although_you_may_also_see_it_written_as_hdd_for_hard_disk_drive_2_short_for_high_definition_hd_describes_a_standard_of_digital_video_or_audio_for_video_it_means_1280_x_720_pixels_or_720p_on_televisions_n_ndigital_versatile_drive_short_for_digital_versatile_disc_or_digital_video_disc_a_dvd_or_dvd_rom_is_a_disc_capable_of_storing_a_significant_amount_more_data_than_a_standard_compact_disc_dvd_dvds_are_widely_used_for_storing_and_viewing_movies_and_other_data_n_ndvd_digital_video_disc_dvd_digital_video_disc_is_a_technology_based_on_optical_data_storage_similar_to_compact_disc_cd_optical_data_storage_is_a_method_of_storing_digital_information_1_s_and_0_s_by_using_light_to_read_the_information_n_n_n_n_n_n_n_n">DRIVE:-  \n  \nA drive is a location (medium) that is capable of storing and reading information that is not easily removed, like a disk or disc. All drives store files and programs used by your computer. For example, when you write a letter in a word processor, the program is loaded from the hard drive. When you save the document, it\'s saved to the hard drive or other disk or drive. \n \nCompact disc (CD) = A compact disc is a portable storage medium that can be used to record, store and play back audio, video and other. \n \nPen Drive = A USB flash drive -- also known as a USB stick, USB thumb drive or pen drive -- is a plug-and-play portable storage device that uses flash memory and is lightweight enough to attach to a keychain. A USB flash drive can be used in place of a compact disc.A USB flash drive -- also known as a USB stick, USB thumb drive or pen drive -- is a plug-and-play portable storage device that uses flash memory and is lightweight enough to attach to a keychain. A USB flash drive can be used in place of a compact disc. \n \nSD Card = A Secure Digital (SD) card is a tiny flash memory card designed for high-capacity memory and various portable devices, such as car navigation systems, cellular phones, e-books, PDAs, smartphones, digital cameras, music players, digital video camcorders and personal computers. \n \n HD Hard Drive = HD is an initialism used for hard drive, although you may also see it written as HDD for hard disk drive. 2. Short for high definition, HD describes a standard of digital video or audio. For video, it means 1280 x 720 pixels, or 720p on televisions. \n \nDigital Versatile Drive = Short for digital versatile disc or digital video disc, a DVD or DVD-ROM is a disc capable of storing a significant amount more data than a standard compact disc. DVD = DVDs are widely used for storing and viewing movies and other data. \n \nDVD (digital video disc) = DVD (digital video disc) is a technology based on optical data storage similar to compact disc (CD). Optical data storage is a method of storing digital information (1\'s and 0\'s) by using light to read the information. \n \n \n \n \n \n \n \n</string>
    <string name="about_computer_n_na_computer_is_a_programmable_electronic_device_that_accepts_raw_data_as_input_and_processes_it_with_a_set_of_instructions_a_program_to_produce_the_result_as_output_it_renders_output_just_after_performing_mathematical_and_logical_operations_and_can_save_the_output_for_future_use_it_can_process_numerical_as_well_as_non_numerical_calculations_the_term_computer_is_derived_from_the_latin_word_computare_which_means_to_calculate_a_computer_is_designed_to_execute_applications_and_provides_a_variety_of_solutions_through_integrated_hardware_and_software_components_it_works_with_the_help_of_programs_and_represents_the_decimal_numbers_through_a_string_of_binary_digits_it_also_has_a_memory_that_stores_the_data_programs_and_result_of_processing_the_components_of_a_computer_such_as_machinery_that_includes_wires_transistors_circuits_hard_disk_are_called_hardware_whereas_the_programs_and_data_are_called_software_it_is_believed_that_the_analytical_engine_was_the_first_computer_which_was_invented_by_charles_babbage_in_1837_it_used_punch_cards_as_read_only_memory_charles_babbage_is_also_known_as_the_father_of_the_computer_n_n_n_n_n_n_n_n">ABOUT COMPUTER:- \n  \nA computer is a programmable electronic device that accepts raw data as input and processes it with a set of instructions (a program) to produce the result as output. It renders output just after performing mathematical and logical operations and can save the output for future use. It can process numerical as well as non-numerical calculations. The term computer is derived from the Latin word computare which means to calculate. A computer is designed to execute applications and provides a variety of solutions through integrated hardware and software components. It works with the help of programs and represents the decimal numbers through a string of binary digits. It also has a memory that stores the data, programs, and result of processing. The components of a computer such as machinery that includes wires, transistors, circuits, hard disk are called hardware. Whereas, the programs and data are called software. It is believed that the Analytical Engine was the first computer which was invented by Charles Babbage in 1837. It used punch cards as read-only memory. Charles Babbage is also known as the father of the computer. \n \n \n \n \n \n \n \n</string>
    <string name="back_to_home">Back TO home</string>
    <string name="retry_quiz">RETRY QUIZ</string>
    <string name="congratulation">Congratulation</string>
    <string name="you_did_a_great_job_nin_the_quiz">You did a great job \nin the quiz</string>
    <string name="score">Score</string>
    <string name="_0">0</string>
    <string name="what_is_computer">What is Computer</string>
    <string name="bird">Bird</string>
    <string name="about_computer">About Computer</string>
    <string name="drived">Drive</string>
    <string name="bit_byte_nibble">BIT-BYTE-NIBBLE</string>
    <string name="full_forms">Full Forms</string>
    <string name="hardware_software">Hardware/Software</string>
    <string name="cpu_monitor">CPU-MONITOR</string>
    <string name="keyboard_mouse">KEYBOARD-MOUSE</string>
    <string name="learn">LEARN</string>
    <string name="quiz">QUIZ</string>
    <string name="beginner">BEGINNER</string>
    <string name="intermediate">INTERMEDIATE</string>
    <string name="advance">ADVANCE</string>
</resources>