<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".MainActivity">
    <ImageView
        android:id="@+id/imageView12"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/questions_rafiki"
        android:contentDescription="@string/todo" />

    <ImageView
        android:id="@+id/imageView18"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout7"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/woman_thinking_amico"
        android:contentDescription="@string/todo" />
    <LinearLayout
        android:id="@+id/linearLayout7"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
    <Button
        android:id="@+id/beginner"
        android:gravity="center"
        android:paddingStart="30dp"
        android:paddingEnd="30dp"
        android:foregroundGravity="center"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:fontFamily="@font/inder"
        android:text="@string/beginner"
        android:textColor="#000000"
        android:textSize="24sp"
        android:textStyle="bold"
        app:backgroundTint="#9CE2F9"
        android:background="@drawable/corner3"
        app:iconTint="#000000"/>

    <Button
        android:id="@+id/intermediate"
        android:gravity="center"
        android:paddingStart="30dp"
        android:paddingEnd="30dp"
        android:foregroundGravity="center"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:fontFamily="@font/inder"
        android:text="@string/intermediate"
        android:textColor="#000000"
        android:textSize="24sp"
        android:textStyle="bold"
        app:backgroundTint="#9CE2F9"
        android:background="@drawable/corner3"
        app:iconTint="#000000"
        android:layout_marginTop="30dp"/>


    <Button
        android:id="@+id/advance"
        android:gravity="center"
        android:paddingStart="30dp"
        android:paddingEnd="30dp"
        android:foregroundGravity="center"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:fontFamily="@font/inder"
        android:text="@string/advance"
        android:textColor="#000000"
        android:textSize="24sp"
        android:textStyle="bold"
        app:backgroundTint="#9CE2F9"
        android:background="@drawable/corner3"
        app:iconTint="#000000"
        android:layout_marginTop="30dp"/>


    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>