<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity_learn_quiz">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/learn"
            android:layout_width="240dp"
            android:layout_height="55dp"
            android:layout_gravity="center"
            android:background="@drawable/corner"
            android:fontFamily="@font/inder"
            android:text="@string/learn"
            android:textColor="#000000"
            android:textSize="39sp"
            android:textStyle="bold"
            app:backgroundTint="#9CE2F9"
            app:iconTint="#000000" />

        <Button
            android:id="@+id/quiz"
            android:layout_width="200dp"
            android:layout_height="55dp"
            android:layout_gravity="center"
            android:layout_marginTop="35dp"
            android:background="@drawable/corner"
            android:fontFamily="@font/inder"
            android:text="@string/quiz"
            android:textColor="#000000"
            android:textSize="39sp"
            android:textStyle="bold"
            app:backgroundTint="#9CE2F9"
            app:iconTint="#000000" />



    </LinearLayout>


    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:srcCompat="@drawable/option_think_ok_quiz_side"
        android:contentDescription="@string/todo" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.375"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.04"
        app:srcCompat="@drawable/learn_below_tree"
        android:contentDescription="@string/todo" />


</androidx.constraintlayout.widget.ConstraintLayout>